# chirp

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  justfile  readme.md
chirp-imgui/: Cargo.toml
chirp-imgui/src/: error.rs  gui.rs
chirp-imgui/src/gui/: about.rs
chirp-minifb/: Cargo.toml
chirp-minifb/src/: error.rs  main.rs  tests.rs  ui.rs
src/: bus.rs  cpu.rs  dump.rs  error.rs  io.rs  lib.rs  main.rs  mem.rs  screen.rs  traits.rs
src/bus/: bus_device.rs  iterator.rs
src/cpu/: behavior.rs  bus.rs  disassemble.rs  disassembler.rs  flags.rs  instruction.rs  mem.rs  mode.rs  old_disassembler.rs  quirks.rs  tests.rs
src/cpu/bus/: read.rs
src/cpu/instruction/: disassembler.rs
src/cpu/tests/: decode.rs
src/cpu/tests/roms/: jumptest.ch8  looptest.ch8
src/error/: any_range.rs
src/error/any_range/: macros.rs
src/traits/: auto_cast.rs
tests/: chip8_test_suite.rs  integration.rs  struct.rs  tests.rs
