[package]
name = "chirp"
version = "0.1.1"
edition = "2021"
default-run = "chirp"
authors = ["John Breaux"]
license = "MIT"
publish = false


[features]
default = ["unstable", "drawille", "minifb"]
unstable = []
drawille = ["dep:drawille"]
iced = ["dep:iced"]
minifb = ["dep:minifb"]
rhexdump = ["dep:rhexdump"]
serde = ["dep:serde"]

[[bin]]
name = "chirp"
path = "src/bin/chirp-minifb/main.rs"
required-features = ["minifb"]

[[bin]]
name = "chirp-disasm"
required-features = ["default"]

[[bin]]
name = "chirp-iced"
required-features = ["iced"]

[[bin]]
name = "chirp-shot-viewer"
required-features = ["default", "drawille"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false


[dependencies]
drawille = {version = "0.3.0", optional = true}
iced = {version = "0.8.0", optional = true}
rhexdump = {version = "^0.1.1", optional = true }
serde = { version = "^1.0", features = ["derive"], optional = true }
minifb = { version = "^0.24.0", optional = true }

gumdrop = "^0.8.1"
imperative-rs = "0.3.1"
owo-colors = "^3"
rand = "^0.8.5"
thiserror = "^1.0.39"
