[package]
name = "chirp"
version = "0.1.1"
edition = "2021"
default-run = "chirp-imgui"
authors = ["John Breaux"]
license = "MIT"
publish = false

[[bin]]
name = "chirp"
path = "src/bin/chirp-minifb/main.rs"
required-features = ["minifb"]

[[bin]]
name = "chirp-disasm"
required-features = ["default"]

[[bin]]
name = "chirp-imgui"
required-features = ["imgui"]

[[bin]]
name = "chirp-shot-viewer"
required-features = ["default", "drawille"]

[features]
default = ["drawille", "imgui", "serde"]
nightly = []
drawille = ["dep:drawille"]
imgui = [
    "dep:imgui",
    "dep:imgui-wgpu",
    "dep:imgui-winit-support",
    "dep:winit",
    "dep:winit_input_helper",
    "dep:pixels",
]
minifb = ["dep:minifb"]
rhexdump = ["dep:rhexdump"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false


[dependencies]

imgui = { version = "^0.10", optional = true }
imgui-winit-support = { version = "^0.10", optional = true }
imgui-wgpu = { version = "^0", optional = true }
pixels = { version = "^0", optional = true }
# TODO: When imgui-winit-support updates to 0.28 (Soon:tm:), update winit and winit_input_helper
winit = { version = "0.27.5", features = ["default", "x11"], optional = true }
winit_input_helper = { version = "^0.13.0", optional = true }

drawille = { version = "0.3.0", optional = true }
rhexdump = { version = "0.1.1", optional = true }
serde = { version = "1.0.0", features = ["derive"], optional = true }
minifb = { version = "0.24.0", optional = true }

gumdrop = "0.8.1"
imperative-rs = "0.3.1"
owo-colors = "3"
rand = "0.8.5"
thiserror = "1.0.39"
