[workspace]
members = ["chirp-imgui", "chirp-minifb"]
# default-members = ["chirp-imgui"]

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["John Breaux"]
license = "MIT"
publish = false

[package]
name = "chirp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "chirp"
path = "src/bin/chirp-minifb/main.rs"
required-features = ["minifb"]

[[bin]]
name = "chirp-disasm"
required-features = ["default"]

[[bin]]
name = "chirp-shot-viewer"
required-features = ["default", "drawille"]

[features]
default = ["drawille", "serde"]
nightly = []
drawille = ["dep:drawille"]
minifb = ["dep:minifb"]
rhexdump = ["dep:rhexdump"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false


[dependencies]

drawille = { version = "0.3.0", optional = true }
rhexdump = { version = "0.1.1", optional = true }
serde = { version = "1.0.0", features = ["derive"], optional = true }
minifb = { version = "0.24.0", optional = true }

gumdrop = "0.8.1"
imperative-rs = "0.3.1"
owo-colors = "3"
rand = "0.8.5"
thiserror = "1.0.39"
